force-app/main/default/objects/Lead/fields/CSAP_Stage__c.field-meta.xml
<CustomField>
    <fullName>CSAP_Stage__c</fullName>
    <label>CSAP Stage</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NAV_Getting_Started</fullName>
                
                
                    <label>NAV_Getting_Started</label>
                
                </value>
            
                <value>
                
                    <fullName>NAV_Personal_Information</fullName>
                
                
                    <label>NAV_Personal_Information</label>
                
                </value>
            
                <value>
                
                    <fullName>NAV_Capacity_Check</fullName>
                
                
                    <label>NAV_Capacity_Check</label>
                
                </value>
            
                <value>
                
                    <fullName>NAV_Credit_Check</fullName>
                
                
                    <label>NAV_Credit_Check</label>
                
                </value>
            
                <value>
                
                    <fullName>NAV_Energy_Information</fullName>
                
                
                    <label>NAV_Energy_Information</label>
                
                </value>
            
                <value>
                
                    <fullName>NAV_Complete</fullName>
                
                
                    <label>NAV_Complete</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>