force-app/main/default/objects/Lead/fields/Custom_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_ID__c</fullName>
    <label>Custom ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>