force-app/main/default/objects/Lead/fields/Custom_ID_Clone__c.field-meta.xml
<CustomField>
    <fullName>Custom_ID_Clone__c</fullName>
    <formula>Custom_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom ID (Clone)</label>
    <type>Text</type>
</CustomField>