force-app/main/default/objects/Lead/fields/Customer_Referral__c.field-meta.xml
<CustomField>
    <fullName>Customer_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>