force-app/main/default/objects/Lead/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <inlineHelpText>The date that the customer provided consents in the Simple Signup Form</inlineHelpText>
    <label>Customer Signed Date</label>
    <type>DateTime</type>
</CustomField>