force-app/main/default/objects/Lead/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>