force-app/main/default/objects/Lead/fields/Customer_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Formula__c</fullName>
    <description>Used to map into Opportunity to trigger workflow that set record type to business/residential. Picklist Customer Group will not fire workflow.</description>
    <formula>Customer_type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type (Formula)</label>
    <type>Text</type>
</CustomField>