force-app/main/default/objects/Lead/fields/Date_of_Application_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application_2__c</fullName>
    <formula>LEFT(Date_of_Application__c,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Residential Loan leads, the date that the application was submitted (prior to 1/10/18), or the date that credit was pulled (1/10/18).</inlineHelpText>
    <label>Date of Application</label>
    <type>Text</type>
</CustomField>