force-app/main/default/objects/Lead/fields/Date_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application__c</fullName>
    <inlineHelpText>Set by Form Assembly: YYYY-MM-DD-HH:MM</inlineHelpText>
    <label>Date of Application Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>