force-app/main/default/objects/Lead/fields/Date_of_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Credit_Report__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Date_of_Credit_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Credit Report</label>
    <type>Date</type>
</CustomField>