force-app/main/default/objects/Lead/fields/Date_of_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiration__c</fullName>
    <label>Date of Expiration</label>
    <type>Date</type>
</CustomField>