force-app/main/default/objects/Lead/fields/Date_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issuance__c</fullName>
    <label>Date of Issuance</label>
    <type>Date</type>
</CustomField>