force-app/main/default/objects/Lead/fields/Days_Since_App_Started__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_App_Started__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between today and the date this lead was created</inlineHelpText>
    <label>Days Since App Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>