force-app/main/default/objects/Lead/fields/debt_income_status__c.field-meta.xml
<CustomField>
    <fullName>debt_income_status__c</fullName>
    <label>Debt/Income Approval (DEACTIVATE)</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Declined</fullName>
                
                
                    <label>Declined</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>