force-app/main/default/objects/Lead/fields/Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead requests demo</inlineHelpText>
    <label>Demo Request</label>
    <type>Checkbox</type>
</CustomField>