force-app/main/default/objects/Lead/fields/Direct_Disbursal_to_Installer_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Direct_Disbursal_to_Installer_Authorized__c</fullName>
    <description>Fed from DOER application form</description>
    <label>Direct Disbursal to Installer Authorized</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>