force-app/main/default/objects/Lead/fields/Docs_Requested__c.field-meta.xml
<CustomField>
    <fullName>Docs_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docs Requested</label>
    <type>Checkbox</type>
</CustomField>