force-app/main/default/objects/Lead/fields/Electric_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Account_Number__c</fullName>
    <label>Electric Account #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>