force-app/main/default/objects/Lead/fields/Electronic_Disbursal_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Disbursal_Authorized__c</fullName>
    <description>Fed from Application form for DOER loan</description>
    <label>Electronic Disbursal Authorized?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>