force-app/main/default/objects/Lead/fields/Email_Helper_Map__c.field-meta.xml
<CustomField>
    <fullName>Email_Helper_Map__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Helper (Map)</label>
    <type>Text</type>
</CustomField>