force-app/main/default/objects/Lead/fields/Email_Re_Enter__c.field-meta.xml
<CustomField>
    <fullName>Email_Re_Enter__c</fullName>
    <label>Email Re-Enter</label>
    <type>Email</type>
</CustomField>