force-app/main/default/objects/Lead/fields/EnergySage_Lead__c.field-meta.xml
<CustomField>
    <fullName>EnergySage_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnergySage Lead?</label>
    <type>Checkbox</type>
</CustomField>