force-app/main/default/objects/Lead/fields/Estimated_Annual_Utility_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Utility_Cost__c</fullName>
    <description>Self Reported Annual Electricity Cost from webform application.  This is used to calculated estimated lifetime savings from CS.  Value maps from Utility Account Log webform.  Field to remain hidden.</description>
    <inlineHelpText>Self Reported Annual Electricity Cost from webform application.  This is used to calculated estimated lifetime savings from CS.  Value maps from Utility Account Log webform.  Field to remain hidden.</inlineHelpText>
    <label>Estimated Annual Utility Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>