force-app/main/default/objects/Lead/fields/Estimated_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Install_Date__c</fullName>
    <description>This is the date submitted by the CS customer on the webform, or if they are also an RL customer, from their RL records.</description>
    <inlineHelpText>This is the date submitted by the CS customer on the webform, or if they are also an RL customer, from their RL records.</inlineHelpText>
    <label>Estimated Install Date</label>
    <type>Date</type>
</CustomField>