force-app/main/default/objects/Lead/fields/Estimated_IX_costs_included_in__c.field-meta.xml
<CustomField>
    <fullName>Estimated_IX_costs_included_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Estimated IX cost included in EPC costs?</label>
    <type>Checkbox</type>
</CustomField>