force-app/main/default/objects/Lead/fields/Estimated_Lifetime_Savings__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lifetime_Savings__c</fullName>
    <description>Estimated lifetime savings based on self-reported energy cost.</description>
    <formula>Estimated_Annual_Utility_Cost__c * 0.1 * 0.8 *20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated lifetime savings based on self-reported energy cost.</inlineHelpText>
    <label>Estimated Lifetime Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>