force-app/main/default/objects/Lead/fields/Express_Consent__c.field-meta.xml
<CustomField>
    <fullName>Express_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field validates that the customer expressed consent to the express consent disclosure in the Solar Loan application.</description>
    <label>Express Consent</label>
    <type>Checkbox</type>
</CustomField>