force-app/main/default/objects/Lead/fields/External_System_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_Lead_ID__c</fullName>
    <label>External System Lead ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>