force-app/main/default/objects/Lead/fields/FICO_PCR__c.field-meta.xml
<CustomField>
    <fullName>FICO_PCR__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_TransUnion__c</formula>
    <label>FICO PCR</label>
    <type>Text</type>
</CustomField>