force-app/main/default/objects/Lead/fields/FICO_Score_Approval__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score_Approval__c</fullName>
    <label>FICO Score Approval</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Declined</fullName>
                
                
                    <label>Declined</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>