force-app/main/default/objects/Lead/fields/Financing_Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Financing_Fee_Override__c</fullName>
    <label>Financing Fee Override</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>