force-app/main/default/objects/Lead/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IF(LASER_Credit_Score__c = null, IMAGE(&quot;/resource/1563473582000/Panda_Icon&quot;, &quot;panda&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays panda icon if no PCR was returned for this lead. Please update customer info and pull credit again</inlineHelpText>
    <label>Flag</label>
    <type>Text</type>
</CustomField>