force-app/main/default/objects/Lead/fields/Form_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Form_Completion_Time__c</fullName>
    <label>Form Completion Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>