force-app/main/default/objects/Lead/fields/Generate_Docs_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Generate_Docs_for_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by LWC/PATCH call to retrieve new docs when relevant Lead fields are updated</description>
    <inlineHelpText>Flag that triggers a WFR to generate disclosure form and contracts for the Lead</inlineHelpText>
    <label>Generate Docs for Review</label>
    <type>Checkbox</type>
</CustomField>