force-app/main/default/objects/Lead/fields/Impact_Study_Costs__c.field-meta.xml
<CustomField>
    <fullName>Impact_Study_Costs__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Impact Study Costs</label>
    <length>80</length>
    <type>Text</type>
</CustomField>