force-app/main/default/objects/Lead/fields/Income_Support__c.field-meta.xml
<CustomField>
    <fullName>Income_Support__c</fullName>
    <formula>IF(  Annual_Income_Currency__c &gt;  66866, if(Annual_Income_Currency__c &gt; 80240, &quot;No&quot;,&quot;Category 2&quot;), &quot;Category 1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Support</label>
    <type>Text</type>
</CustomField>