force-app/main/default/objects/Lead/fields/Income_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Income_Type_2__c</fullName>
    <label>Income Type (2)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>