force-app/main/default/objects/Lead/fields/Income_Verified__c.field-meta.xml
<CustomField>
    <fullName>Income_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has income documentation been reviewed and determined to be accurate?</description>
    <inlineHelpText>Has income documentation been reviewed and determined to be accurate?</inlineHelpText>
    <label>Income Verified?</label>
    <type>Checkbox</type>
</CustomField>