force-app/main/default/objects/Lead/fields/Interest_Rate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Picklist__c</fullName>
    <label>Interest Rate Picklist</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>1.89</fullName>
                
                
                    <label>1.89</label>
                
                </value>
            
                <value>
                
                    <fullName>3.25</fullName>
                
                
                    <label>3.25</label>
                
                </value>
            
                <value>
                
                    <fullName>3.39</fullName>
                
                
                    <label>3.39</label>
                
                </value>
            
                <value>
                
                    <fullName>5.99</fullName>
                
                
                    <label>5.99</label>
                
                </value>
            
                <value>
                
                    <fullName>6.25</fullName>
                
                
                    <label>6.25</label>
                
                </value>
            
                <value>
                
                    <fullName>6.49</fullName>
                
                
                    <label>6.49</label>
                
                </value>
            
                <value>
                
                    <fullName>3.29</fullName>
                
                
                    <label>3.29</label>
                
                </value>
            
                <value>
                
                    <fullName>3.99</fullName>
                
                
                    <label>3.99</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>