force-app/main/default/objects/Lead/fields/Inverter_Count__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Count__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Inverter Count</label>
    <length>20</length>
    <type>Text</type>
</CustomField>