force-app/main/default/objects/Lead/fields/Inverter_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Manufacturer__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Inverter Manufacturer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>