force-app/main/default/objects/Lead/fields/Is_there_a_Partner_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Partner_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a QC checkbox for confirming that the Customer has an installer we are ready to work with.</description>
    <inlineHelpText>This is a QC checkbox for confirming that the Customer has an installer we are ready to work with.</inlineHelpText>
    <label>Installer in PIN?</label>
    <type>Checkbox</type>
</CustomField>