force-app/main/default/objects/Lead/fields/Joint_Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Type__c</fullName>
    <label>Joint Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Applicant</fullName>
            </value>
            <value>
                <fullName>Co-Signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>