force-app/main/default/objects/Lead/fields/LASER_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>LASER_Credit_Score__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Credit_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LASER Credit Score</label>
    <type>Text</type>
</CustomField>