force-app/main/default/objects/Lead/fields/LASERCA__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>