force-app/main/default/objects/Lead/fields/LASERCA__Co_Applicant_DOB__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_DOB__c</fullName>
    <label>Co-Applicant DOB</label>
    <type>Date</type>
</CustomField>