force-app/main/default/objects/Lead/fields/LASERCA__Co_Applicant_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_Social_Security_Number__c</fullName>
    <label>Co-Applicant Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>