force-app/main/default/objects/Lead/fields/LASERCA__Credit_Bureau__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Bureau__c</fullName>
    <label>Credit Bureau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>TransUnion</fullName>
            </value>
            <value>
                <fullName>Equifax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>