force-app/main/default/objects/Lead/fields/LASERCA__Home_State__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Home_State__c</fullName>
    <label>Home State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>