force-app/main/default/objects/Lead/fields/LASERCA__Pull_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Pull_Credit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this box a credit report will be pulled on this lead.</inlineHelpText>
    <label>Pull Credit Report</label>
    <type>Checkbox</type>
</CustomField>