force-app/main/default/objects/Lead/fields/LASERCA__Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Social_Security_Number__c</fullName>
    <label>**Deprecated SSN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>