force-app/main/default/objects/Lead/fields/LASERCA__SSN__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__SSN__c</fullName>
    <description>xxx-xx-xxxx</description>
    <inlineHelpText>xxx-xx-xxxx</inlineHelpText>
    <label>Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>