force-app/main/default/objects/Lead/fields/Last_point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_point_of_Contact__c</fullName>
    <label>Last point of Contact</label>
    <type>Date</type>
</CustomField>