force-app/main/default/objects/Lead/fields/Lead_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_18_digit__c</fullName>
    <description>This is the case safe 18 digit salesforce id. It was created to be used with the marketing cloud connector.</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>This is the case safe 18 digit salesforce id. It was created to be used with the marketing cloud connector.</inlineHelpText>
    <label>Lead ID (18 digit)</label>
    <type>Text</type>
</CustomField>