force-app/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <displayFormat>BWL{00000000}</displayFormat>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>