force-app/main/default/objects/Lead/fields/Lead_Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number_of_Applicants__c</fullName>
    <description>Numerical Expression of individual vs joint applications.  Required for MCEC reporting.</description>
    <formula>if( Application_Type__c = &quot;Joint&quot;,2,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Number of Applicants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>