force-app/main/default/objects/Lead/fields/Lead_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Lead_Power_of_One__c</fullName>
    <description>https://success.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9300000001pFV&amp;fId=0D53000001GwrJW</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power of 1 field for Lead reporting
https://success.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9300000001pFV&amp;fId=0D53000001GwrJW</inlineHelpText>
    <label>Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>