force-app/main/default/objects/Lead/fields/Lead_QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>Lead_QC_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked as part of Sales&apos; QC of CS leads.</description>
    <inlineHelpText>This is checked as part of Sales&apos; QC of CS leads.</inlineHelpText>
    <label>Lead QC Complete</label>
    <type>Checkbox</type>
</CustomField>