force-app/main/default/objects/Lead/fields/Leads_List__c.field-meta.xml
<CustomField>
    <fullName>Leads_List__c</fullName>
    <label>Leads List</label>
    <length>20</length>
    <type>Text</type>
</CustomField>