force-app/main/default/objects/Lead/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>xxLicense Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>