force-app/main/default/objects/Lead/fields/License_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>License_Number_Encrypted__c</fullName>
    <description>This is the new encrypted field for the drivers license number. If you need to see the full value, please contact your system admin. Approval from an executive may be required.</description>
    <inlineHelpText>This is the new encrypted field for the drivers license number. If you need to see the full value, please contact your system admin. Approval from an executive may be required.</inlineHelpText>
    <label>License Number Encrypted</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>