force-app/main/default/objects/Lead/fields/Load_Z__c.field-meta.xml
<CustomField>
    <fullName>Load_Z__c</fullName>
    <formula>IF(
OR(

left(TEXT( LZU__c ),4) = &apos;NEMA&apos;,
left(TEXT( LZU__c ),4) = &apos;SEMA&apos;,
left(TEXT( LZU__c ),4) = &apos;WCMA&apos;),

left(TEXT( LZU__c ),4),

IF(

TEXT( LZU__c ) = &apos;Manual Lookup Required&apos;,

&apos;Manual Lookup Required&apos;, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XXXX Load Zone (F)</label>
    <type>Text</type>
</CustomField>