force-app/main/default/objects/Lead/fields/Load_Zone__c.field-meta.xml
<CustomField>
    <fullName>Load_Zone__c</fullName>
    <label>XXXX Load Zone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NEMA</fullName>
                
                
                    <label>NEMA</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA</fullName>
                
                
                    <label>SEMA</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA</fullName>
                
                
                    <label>WCMA</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>