force-app/main/default/objects/Lead/fields/load_zone_check_needed__c.field-meta.xml
<CustomField>
    <fullName>load_zone_check_needed__c</fullName>
    <formula>IF(OR(

INCLUDES(Load_Zone__c, &quot;SEMA/NEMA&quot;),

INCLUDES(Load_Zone__c, &quot;SEMA/WCMA&quot;),

INCLUDES(Load_Zone__c, &quot;WCMA/NEMA&quot;),  

INCLUDES(Load_Zone__c, &quot;NEMA/SEMA&quot;),

INCLUDES(Load_Zone__c, &quot;WCMA/SEMA&quot;),

INCLUDES(Load_Zone__c, &quot;NEMA/WCMA&quot;)

) ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select &quot;Check Load Zone&quot; button and lookup customer&apos;s address.
WCMA = 8 - 10
NEMA = 11 - 12
SEMA = 13 -14</inlineHelpText>
    <label>XXXXX Load Zone Check Needed</label>
    <type>Checkbox</type>
</CustomField>