force-app/main/default/objects/Lead/fields/Load_Zone_Utility__c.field-meta.xml
<CustomField>
    <fullName>Load_Zone_Utility__c</fullName>
    <formula>Zip_Code_Lookup_Field__r.Load_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XXXXX Load Zone Utility</label>
    <type>Text</type>
</CustomField>