force-app/main/default/objects/Lead/fields/LoadZone__c.field-meta.xml
<CustomField>
    <fullName>LoadZone__c</fullName>
    <inlineHelpText>Text Field (ex. SEMA, NEMA) If in a split load zone, this field will be populated with both until resolved (SEMA/NEMA)</inlineHelpText>
    <label>Load Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>