force-app/main/default/objects/Lead/fields/Loan_Financing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Loan_Financing_Fee__c</fullName>
    <label>Loan Financing Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>